  * Fixed selections using operators backwards ('prop 10 > mass') and sensitivity
    about whitespace around these (PR #1156 Issue #1011 #1009)
  * Fixed PSA analysis is now using AlignTraj
  * Fixed Principal Axes to order from highest to lowest eigenval (Issue #1162)
  * Fixed analysis.density with soluteselection and notwithin_coordinates_factory
    when using KDTree (Issue #1211)

Changes
  * Started unifying the API of analysis classes (named internally
    "Bauhaus" style; see Issue #719)
  * Added protected variable _frame_index to to keep track of frame iteration
    number in AnalysisBase
  * Added new AlignTraj class for alignment. (Issue #845)
  * Added new diffusionmap module for dimension reduction (Issue #857)
  * Added new PCA module for dimension reduction (PR #896)
  * Qcprot now takes N x 3 arrays instead of 3 x N arrays. This gives about a
    40% speed up. (PR #930)
  * The ProgressMeter class now has a `dynamic` keyword argument. It is now
    recommended to provide format strings using the new python format syntax,
    the old %-based syntax is still available but will be deprecated.
    (PR #944)
  * Analysis.rms.RMSD now confirms to standard analysis API (Issue #893)
  * Fragments in Universe.fragment are now sorted by the index of their first
    atom. (Issue 1007)
  * atoms.tranform/translate/rotate/rotateby return original atomgroup
    (Issue #1010)
  * atoms.translate/rotateby don't accept AtomGroup tuples as
    parameters anymore (Issue #1025)
  * atoms.rotate can be given center of rotation (Issue #1022)
  * XTCFile and TRRFile only raise IOError now on error.
  * Deprecate usage of MDAnalysis.core.AtomGroup
  * get_writer_for() returns NullWriter when filename=None instead of
    raising TypeError and filename is now a required arg instead of kwarg
  * moved coordinates.base.ChainReader to coordinates.chain.ChainReader
  * renamed private method ChainReader.get_flname() to ChainReader._get_filename()