@@ -1,0 +1,129 @@
+GRO file with wrapping resids
+126
+    0MET      N    1   5.202   4.356   3.155
+    0MET     H1    2   5.119   4.411   3.172
+    0MET     H2    3   5.155   4.283   3.104
+    0MET     H3    4   5.247   4.318   3.237
+    0MET     CA    5   5.306   4.421   3.075
+    0MET     HA    6   5.383   4.347   3.054
+    0MET     CB    7   5.257   4.474   2.941
+    0MET    HB1    8   5.189   4.404   2.893
+    0MET    HB2    9   5.202   4.564   2.966
+    0MET     CG   10   5.371   4.511   2.845
+    0MET    HG1   11   5.347   4.566   2.754
+    0MET    HG2   12   5.439   4.573   2.903
+    0MET     SD   13   5.464   4.368   2.784
+    0MET     CE   14   5.335   4.312   2.670
+    0MET    HE1   15   5.315   4.378   2.586
+    0MET    HE2   16   5.359   4.210   2.638
+    0MET    HE3   17   5.242   4.291   2.723
+    0MET      C   18   5.374   4.532   3.155
+    0MET      O   19   5.306   4.623   3.201
+99999ARG      N   20   5.505   4.531   3.177
+99999ARG      H   21   5.553   4.450   3.139
+99999ARG     CA   22   5.593   4.627   3.241
+99999ARG     HA   23   5.536   4.716   3.268
+99999ARG     CB   24   5.648   4.578   3.375
+99999ARG    HB1   25   5.695   4.482   3.355
+99999ARG    HB2   26   5.718   4.649   3.417
+99999ARG     CG   27   5.549   4.536   3.484
+99999ARG    HG1   28   5.490   4.622   3.512
+99999ARG    HG2   29   5.472   4.466   3.450
+99999ARG     CD   30   5.615   4.483   3.611
+99999ARG    HD1   31   5.670   4.390   3.599
+99999ARG    HD2   32   5.688   4.557   3.645
+99999ARG     NE   33   5.517   4.468   3.719
+99999ARG     HE   34   5.424   4.442   3.690
+99999ARG     CZ   35   5.547   4.450   3.849
+99999ARG    NH1   36   5.675   4.446   3.888
+99999ARG   HH11   37   5.748   4.435   3.820
+99999ARG   HH12   38   5.701   4.426   3.984
+99999ARG    NH2   39   5.451   4.453   3.943
+99999ARG   HH21   40   5.362   4.497   3.926
+99999ARG   HH22   41   5.470   4.417   4.035
+99999ARG      C   42   5.703   4.659   3.140
+99999ARG      O   43   5.801   4.585   3.137
+    0ILE      N   44   5.686   4.767   3.063
+    0ILE      H   45   5.594   4.808   3.059
+    0ILE     CA   46   5.776   4.832   2.970
+    0ILE     HA   47   5.849   4.775   2.913
+    0ILE     CB   48   5.698   4.891   2.852
+    0ILE     HB   49   5.628   4.963   2.894
+    0ILE    CG1   50   5.628   4.786   2.766
+    0ILE   HG11   51   5.691   4.746   2.686
+    0ILE   HG12   52   5.608   4.702   2.832
+    0ILE    CG2   53   5.778   4.984   2.761
+    0ILE   HG21   54   5.877   4.945   2.736
+    0ILE   HG22   55   5.728   5.020   2.671
+    0ILE   HG23   56   5.789   5.079   2.813
+    0ILE     CD   57   5.509   4.845   2.691
+    0ILE    HD1   58   5.428   4.871   2.759
+    0ILE    HD2   59   5.518   4.928   2.620
+    0ILE    HD3   60   5.470   4.758   2.638
+    0ILE      C   61   5.844   4.948   3.042
+    0ILE      O   62   5.777   5.031   3.104
+    1ILE      N   63   5.976   4.957   3.030
+    1ILE      H   64   6.030   4.873   3.013
+    1ILE     CA   65   6.055   5.078   3.048
+    1ILE     HA   66   6.012   5.144   3.123
+    1ILE     CB   67   6.194   5.044   3.101
+    1ILE     HB   68   6.209   4.950   3.049
+    1ILE    CG1   69   6.185   4.998   3.247
+    1ILE   HG11   70   6.158   5.079   3.315
+    1ILE   HG12   71   6.104   4.927   3.260
+    1ILE    CG2   72   6.314   5.135   3.076
+    1ILE   HG21   73   6.312   5.176   2.974
+    1ILE   HG22   74   6.314   5.216   3.148
+    1ILE   HG23   75   6.412   5.099   3.106
+    1ILE     CD   76   6.313   4.940   3.309
+    1ILE    HD1   77   6.377   5.027   3.323
+    1ILE    HD2   78   6.304   4.894   3.407
+    1ILE    HD3   79   6.372   4.877   3.242
+    1ILE      C   80   6.062   5.142   2.911
+    1ILE      O   81   6.081   5.073   2.811
+99999LEU      N   82   6.051   5.275   2.911
+99999LEU      H   83   6.062   5.329   2.996
+99999LEU     CA   84   6.042   5.356   2.790
+99999LEU     HA   85   6.081   5.291   2.712
+99999LEU     CB   86   5.896   5.393   2.764
+99999LEU    HB1   87   5.857   5.292   2.751
+99999LEU    HB2   88   5.853   5.443   2.851
+99999LEU     CG   89   5.875   5.480   2.640
+99999LEU     HG   90   5.960   5.546   2.623
+99999LEU    CD1   91   5.872   5.392   2.514
+99999LEU   HD11   92   5.784   5.329   2.508
+99999LEU   HD12   93   5.860   5.448   2.421
+99999LEU   HD13   94   5.959   5.327   2.509
+99999LEU    CD2   95   5.752   5.570   2.653
+99999LEU   HD21   96   5.661   5.529   2.698
+99999LEU   HD22   97   5.760   5.659   2.715
+99999LEU   HD23   98   5.724   5.599   2.551
+99999LEU      C   99   6.137   5.474   2.801
+99999LEU      O  100   6.119   5.565   2.881
+    0LEU      N  101   6.241   5.473   2.717
+    0LEU      H  102   6.245   5.386   2.665
+    0LEU     CA  103   6.359   5.555   2.703
+    0LEU     HA  104   6.351   5.639   2.772
+    0LEU     CB  105   6.482   5.472   2.741
+    0LEU    HB1  106   6.503   5.403   2.659
+    0LEU    HB2  107   6.572   5.534   2.744
+    0LEU     CG  108   6.487   5.389   2.869
+    0LEU     HG  109   6.403   5.320   2.859
+    0LEU    CD1  110   6.601   5.287   2.873
+    0LEU   HD11  111   6.695   5.335   2.848
+    0LEU   HD12  112   6.612   5.242   2.972
+    0LEU   HD13  113   6.589   5.201   2.807
+    0LEU    CD2  114   6.493   5.473   2.997
+    0LEU   HD21  115   6.400   5.525   3.019
+    0LEU   HD22  116   6.518   5.409   3.082
+    0LEU   HD23  117   6.580   5.538   3.004
+    0LEU      C  118   6.364   5.621   2.565
+    0LEU      O  119   6.296   5.584   2.470
+    1GLY      N  120   6.454   5.718   2.552
+    1GLY      H  121   6.511   5.742   2.632
+    1GLY     CA  122   6.459   5.806   2.437
+    1GLY    HA1  123   6.541   5.781   2.371
+    1GLY    HA2  124   6.372   5.801   2.372
+    1GLY      C  125   6.480   5.955   2.464
+    1GLY      O  126   6.428   6.007   2.562
+   8.00170   8.00170   5.65806   0.00000   0.00000   0.00000   0.00000   4.00085   4.00085
